@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180408"
-#define public MagickPackageReleaseDate "snapshot-20180408"
+#define public MagickPackageVersionAddendum ".020180410"
+#define public MagickPackageReleaseDate "snapshot-20180410"
